devqa/services/authentik/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: authentik
  namespace: authentik
spec:
  hosts:
  - authentik.internal.magiccityit.com
  gateways:
  - istio-ingress/internal-magiccityit-gateway
  - mesh
  http:
  - route:
    - destination:
        host: authentik-server
        port:
          number: 80
  tls:
  - route:
    - destination:
        host: authentik-server
